webapp_proxy/envoy.yaml
# Envoy gRPC reverse proxy for CORE
# - Downstream: TLS (optional mTLS)
# - Upstream: h2c to core-daemon on 127.0.0.1:50051
# - Admin interface: 127.0.0.1:9901 (secured by loopback)
#
# Adjust cert paths under webapp_proxy/certs/ and set require_client_certificate: true to enable mTLS.
# If you don't want TLS yet, switch listener filter chains to use a plaintext filter (commented below).

static_resources:
  listeners:
  - name: core_grpc_listener
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 7443
    listener_filters:
    - name: envoy.filters.listener.tls_inspector
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.filters.listener.tls_inspector.v3.TlsInspector
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: core_grpc_hcm
          access_log:
          - name: envoy.access_loggers.file
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
              path: /var/log/envoy/core-grpc-access.log
              log_format:
                text_format_source:
                  inline_string: "[%START_TIME%] %DOWNSTREAM_REMOTE_ADDRESS% -> %REQ(:AUTHORITY)% %REQ(:METHOD)% %PROTOCOL% %RESPONSE_CODE% %DURATION%ms upstream:%UPSTREAM_HOST%\n"
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          http2_protocol_options: {}
          # Strictly HTTP/2 for gRPC
          upgrade_configs: []
          route_config:
            name: local_route
            virtual_hosts:
            - name: core_grpc
              domains: ["*"]
              routes:
              - match: { prefix: "/" }
                route:
                  cluster: core_daemon
                  timeout: 0s  # gRPC streams may be long-lived
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
          common_tls_context:
            alpn_protocols: ["h2"]
            tls_certificates:
            - certificate_chain:
                filename: /home/ubuntu/core-topo-gen/webapp_proxy/certs/server.crt
              private_key:
                filename: /home/ubuntu/core-topo-gen/webapp_proxy/certs/server.key
            validation_context:
              # Enable mTLS by setting require_client_certificate to true
              trusted_ca:
                filename: /home/ubuntu/core-topo-gen/webapp_proxy/certs/ca.crt
          require_client_certificate: false
    # For plaintext (no TLS), replace filter_chains with a single chain without transport_socket.

  clusters:
  - name: core_daemon
    connect_timeout: 1s
    type: STATIC
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: core_daemon
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 50051
    # Upstream is h2c (cleartext HTTP/2)
    typed_extension_protocol_options:
      envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
        "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
        explicit_http_config:
          http2_protocol_options: {}

admin:
  access_log_path: /var/log/envoy/admin.log
  address:
    socket_address:
      address: 127.0.0.1
      port_value: 9901
